--- a/home.html
+++ b/home.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="html" href="./ashil.html">
+    
     <title>Document</title>
+
+    <!-- <link rel="html-import" href="./ashil.html"> -->
+
 </head>
 <body>
-    <custom-tag>
+    <h1>Home Page</h1>
+  <!-- <iframe src="./ashil.html" seamless height="550px" width="800px"></iframe> -->
 
-    </custom-tag>
+  <object data="./ashil.html" height="550px" width="800px"></object>
+
+    <!-- <custom-tag>
+
+    </custom-tag> -->
+
+
     
 </body>
 </html>
