--- a/ashil.html
+++ b/ashil.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <custom-tag class="custom-tag">
+    <ashil-editor class="custom-tag">
         <div class="container container-div" >
 
             <h2>Text Area</h2>
@@ -45,12 +45,12 @@
             
             </div>
 
-    </custom-tag>
+    </ashil-editor>
   
     <script>
         
 
-        customElements.define('custom-tag', class extends HTMLElement {});
+        customElements.define('ashil-editor', class extends HTMLElement {});
     // var XFoo = document.registerElement('custom-tag');
     // document.body.appendChild(new XFoo());
 
