--- a/ashil.html
+++ b/ashil.html
@@ -17,6 +17,12 @@
 
         }
 
+        p{
+            color: chocolate;
+            font-weight: 600;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
     </style>
 </head>
 
