--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Document</title>
+    <title>Code Tantra Form</title>
+
+    <style>
+      .home-page-h1{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        margin-left: 100px;
+      }
+      body{
+        background-color: cadetblue;
+      }
+
+    </style>
 
     <!-- <link rel="html-import" href="./ashil.html"> -->
 
 </head>
-<body>
-    <h1>Home Page</h1>
+<body >
+    <h1 class="home-page-h1">Home Page</h1>
   <!-- <iframe src="./ashil.html" seamless height="550px" width="800px"></iframe> -->
 
   <object data="./ashil.html" height="550px" width="800px"></object>
