--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
 
     </style>
 
-    <!-- <link rel="html-import" href="./ashil.html"> -->
+    <link rel="html" type="import" href="ashil.html">
 
 </head>
 <body >
     <h1 class="home-page-h1">Home Page</h1>
   <!-- <iframe src="./ashil.html" seamless height="550px" width="800px"></iframe> -->
 
-  <object data="./ashil.html" height="550px" width="800px"></object>
+  <!-- <object data="./ashil.html" height="550px" width="800px"></object> -->
 
-    <!-- <custom-tag>
-
-    </custom-tag> -->
-
+    <ashil-editor>
+      
+    </ashil-editor>
 
     
 </body>
