--- a/index.html
+++ b/index.html
@@ -7,26 +7,11 @@
     
     <title>Code Tantra Form</title>
 
-    <style>
-      .home-page-h1{
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        margin-left: 100px;
-      }
-      body{
-        background-color: rgb(78, 215, 225)  ;
-      }
-      ashil-editor{
-        background-color: antiquewhite;
-      }
-
-
-
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="ashil.css">
-
    
-    <script type="text/javascript" src="./ashil-editor.js"></script>
+    <script type="text/javascript" src="ashil-editor.js"></script>
 
 </head>
 <body >
